--- a/gano.html
+++ b/gano.html
@@ -1,24 +1,56 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Developer AI-Powered Resume Analyzer</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      padding: 4rem;
+      background: linear-gradient(to right, #eef2f3, #8e9eab);
+      color: #333;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    a.button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background-color: #007acc;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+
+    a.button:hover {
+      background-color: #005fa3;
+    }
+
+    footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Welcome to my website!</h1>
-        <p>This is a simple website created using HTML, CSS, and JavaScript.</p>
-        <button id="myButton">Click me!</button>
-    </main>
-    <script src="script.js"></script>
+  <h1>Developer AI-Powered Resume Analyzer</h1>
+  <p>Analyze your resume and match it to job descriptions with AI precision.</p>
+  <a class="button" href="https://github.com/YOUR_USERNAME">View Source on GitHub</a>
+
+  <footer>
+    <p>&copy; 2025 Developer AI Resume Tool</p>
+  </footer>
 </body>
 </html>
