--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/uoj.jpg" alt="University of Juba Logo" style="max-height: 100px; margin-bottom: 20px;">
+    <img src="assets/uoj.jpg" alt="uoj.jpg" style="max-height: 100px; margin-bottom: 20px;">
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <p><a href="#abstract">Abstract</a> | <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer">GitHub</a> | <a href="#visuals">Visualizations</a></p>
@@ -100,7 +100,7 @@
       The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
       It includes modules for skill extraction, job title prediction, and candidate ranking.
     </p>
-    <img src="assets/overview.png" alt="Method Overview">
+    <img src="assets/Overview.png" alt="Method Overview">
   </section>
 
   <section id="features">
