--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
     <p>Website template adapted from Michaël Gharbi</p>
-    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
+    <p>Contact: <a href="mailto:jamesdutmathok@gmail.com" style="color: #b3e0ff;">jamesdutmathok@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
 </body>
