--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
       color: #003366;
     }
     img {
+      display: block;
       max-width: 100%;
+      height: auto;
       border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+      margin: 20px auto;
     }
     pre {
       background: #d9e6f2;
@@ -78,7 +81,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/uoj.jpg" alt="uoj.jpg" style="max-height: 100px; margin-bottom: 20px;">
+    <img src="assets/uoj.jpg" alt="University of Juba Logo">
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <p><a href="#abstract">Abstract</a> | <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer">GitHub</a> | <a href="#visuals">Visualizations</a></p>
@@ -100,7 +103,7 @@
       The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
       It includes modules for skill extraction, job title prediction, and candidate ranking.
     </p>
-    <img src="assets/Overview.png" alt="Method Overview">
+    <img src="assets/overview.png" alt="Method Overview">
   </section>
 
   <section id="features">
@@ -171,8 +174,8 @@
   </section>
 
   <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
-    <p>Website template adapted from Michaël Gharbi</p>
-    <p>Contact: <a href="mailto:jamesdutmathok@gmail.com" style="color: #b3e0ff;">jamesdutmathok@gmail.com</a></p>
+    <p> Developed By Students from University of Juba </p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
 </body>
