--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/uoj.jpg" alt="uoj.jpg">
+    <img src="assets/uoj.jpg" alt="https://github.com/Ganomanut/junubinTech_website1/blob/main/uoj.jpg">
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <p><a href="#abstract">Abstract</a> | <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer">GitHub</a> | <a href="#visuals">Visualizations</a></p>
