--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
       margin: 20px auto;
     }
+    .logo-img {
+      max-width: 150px;
+      margin-bottom: 10px;
+    }
     pre {
       background: #d9e6f2;
       padding: 15px;
@@ -81,7 +85,7 @@
 </head>
 <body>
   <header>
-    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo">
+    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo">
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <p><a href="#abstract">Abstract</a> | <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer">GitHub</a> | <a href="#visuals">Visualizations</a></p>
@@ -143,6 +147,7 @@
     <ul>
       <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
       <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
+      <li><a href="https://colab.research.google.com/drive/1L2ciKHo7MP2Tx45KHKNmJJHtA8C30KFW?usp=sharing" target="_blank">Google Colab Notebook</a></li>
     </ul>
   </section>
 
