--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
     ul li {
       margin-bottom: 8px;
     }
+    .github-badge {
+      display: inline-block;
+      padding: 3px 8px;
+      font-size: 12px;
+      background-color: #333;
+      color: #fff;
+      border-radius: 3px;
+      margin-left: 6px;
+      font-weight: normal;
+    }
   </style>
 </head>
 <body>
@@ -88,7 +98,11 @@
     <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo">
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
-    <p><a href="#abstract">Abstract</a> | <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer">GitHub</a> | <a href="#visuals">Visualizations</a></p>
+    <nav>
+      <a href="#abstract">Abstract</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a> |
+      <a href="#visuals">Visualizations</a>
+    </nav>
   </header>
 
   <section id="abstract">
