--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <ul>
       <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
       <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
-      <li><a href="https://colab.research.google.com/drive/1L2ciKHo7MP2Tx45KHKNmJJHtA8C30KFW?usp=sharing" target="_blank">Google Colab Notebook</a></li>
+      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
     </ul>
   </section>
 
