--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI-Powered Resume Analyzer">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="AI-Powered Resume Analyzer" />
   <title>University of Juba - Resume Analyzer</title>
   <style>
     body {
@@ -69,12 +69,6 @@
       overflow-x: auto;
       border-left: 5px solid #0073e6;
     }
-    video {
-      max-width: 100%;
-      border-radius: 12px;
-      margin-top: 20px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
     input[type="file"] {
       margin-top: 10px;
     }
@@ -91,11 +85,19 @@
       margin-left: 6px;
       font-weight: normal;
     }
+    iframe {
+      width: 100%;
+      height: 480px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo">
+    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <nav>
@@ -121,7 +123,7 @@
       The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
       It includes modules for skill extraction, job title prediction, and candidate ranking.
     </p>
-    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
+    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview" />
   </section>
 
   <section id="features">
@@ -151,9 +153,9 @@
   <section id="visuals">
     <h2>Visualizations</h2>
     <h3>Match Score Visualization</h3>
-    <img src="assets/match_score_viz.png" alt="Match Score Visualization">
+    <img src="assets/match_score_viz.png" alt="Match Score Visualization" />
     <h3>Resume Highlights</h3>
-    <img src="assets/resume_parsing_demo.png" alt="Resume Parsing Demo">
+    <img src="assets/resume_parsing_demo.png" alt="Resume Parsing Demo" />
   </section>
 
   <section id="resources">
@@ -168,10 +170,19 @@
   <section id="demo">
     <h2>Video Demonstration</h2>
     <p>Watch the system in action in this brief demonstration:</p>
-    <video controls>
-      <source src="assets/resume_demo.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+
+    <!-- ✅ OPTION A: Google Drive Embed -->
+    <iframe src="https://drive.google.com/file/d/YOUR_FILE_ID/preview" allow="autoplay"></iframe>
+
+    <!-- ✅ OPTION B: YouTube Embed -->
+    <!--
+    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    -->
+
+    <!-- ✅ OPTION C: Vimeo Embed -->
+    <!--
+    <iframe src="https://player.vimeo.com/video/YOUR_VIDEO_ID" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    -->
   </section>
 
   <section id="citation">
