--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI-Powered Resume Analyzer">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="AI-Powered Resume Analyzer"/>
   <title>University of Juba - Resume Analyzer</title>
   <style>
     body {
@@ -77,8 +77,19 @@
       margin-top: 20px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    input[type="file"] {
-      margin-top: 10px;
+    .developer-section {
+      text-align: center;
+    }
+    .developer-img {
+      width: 200px;
+      border-radius: 100px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      margin-bottom: 15px;
+    }
+    .developer-name {
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
     ul li {
       margin-bottom: 8px;
@@ -97,7 +108,7 @@
 </head>
 <body>
   <header>
-    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo">
+    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <nav>
@@ -171,6 +182,13 @@
     <h2>Video Demonstration</h2>
     <p>Watch the system in action in this brief demonstration:</p>
     <iframe src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
+  </section>
+
+  <section id="developers" class="developer-section">
+    <h2>Developer</h2>
+    <img class="developer-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/james.jpg" alt="Developer James Dut Mathok">
+    <div class="developer-name">James Dut Mathok</div>
+    <p>University of Juba, School of Computer Science and IT</p>
   </section>
 
   <section id="citation">
