--- a/index.html
+++ b/index.html
@@ -118,4 +118,72 @@
     <h2>Method Overview</h2>
     <p>
       The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
-      It includes modules for skill extraction, job title prediction, and candidate
+      It includes modules for skill extraction, job title prediction, and candidate ranking.
+    </p>
+    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
+  </section>
+
+  <section id="features">
+    <h2>Key Features</h2>
+    <ul>
+      <li>Resume Parsing into structured JSON</li>
+      <li>Job Description Matching</li>
+      <li>Job Title Prediction using ML</li>
+      <li>Semantic Skill Extraction</li>
+      <li>Candidate Ranking and Score Visualization</li>
+    </ul>
+  </section>
+
+  <section id="content">
+    <h2>Information Extracted</h2>
+    <ul>
+      <li>Job Title</li>
+      <li>Candidate Highlights</li>
+      <li>Direct Skill Matches</li>
+      <li>Related Skills</li>
+      <li>Experience Alignment</li>
+      <li>Keyword Frequency Score</li>
+      <li>Overall Matching Score</li>
+    </ul>
+  </section>
+
+  <section id="visuals">
+    <h2>Visualizations</h2>
+    <h3>Match Score Visualization</h3>
+    <img src="assets/match_score_viz.png" alt="Match Score Visualization">
+    <h3>Resume Highlights</h3>
+    <img src="assets/resume_parsing_demo.png" alt="Resume Parsing Demo">
+  </section>
+
+  <section id="resources">
+    <h2>Resources</h2>
+    <ul>
+      <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
+      <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
+      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
+    </ul>
+  </section>
+
+  <section id="demo">
+    <h2>Video Demonstration</h2>
+    <p>Watch the system in action in this brief demonstration:</p>
+    <iframe src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
+  </section>
+
+  <section id="citation">
+    <h2>Citation</h2>
+    <pre><code>@misc{gano2025resumeanalyzer,
+  title={AI-Powered Resume Analyzer},
+  author={Gano},
+  year={2025},
+  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
+}</code></pre>
+  </section>
+
+  <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
+    <p> Developed By Students from University of Juba </p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
+    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  </footer>
+</body>
+</html>
