--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
   <section id="visuals">
     <h2>Visualizations</h2>
     <h3>Match Score Visualization</h3>
-    <img src="assets/match_score_viz.png" alt="Match Score Visualization">
+    <img src="https://github.com/Ganomanut/junubinTech_website1/blob/main/visualscore.png" alt="Match Score Visualization">
     <h3>Resume Highlights</h3>
-    <img src="assets/resume_parsing_demo.png" alt="Resume Parsing Demo">
+    <img src="https://github.com/Ganomanut/junubinTech_website1/blob/main/resumeparse.png" alt="Resume Parsing Demo">
   </section>
 
   <section id="resources">
