--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="AI-Powered Resume Analyzer"/>
-  <title> AI Powered Resume Analyzer</title>
+  <title>AI Powered Resume Analyzer</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -151,9 +151,9 @@
   <section id="visuals">
     <h2>Visualizations</h2>
     <h3>Match Score Visualization</h3>
-    <img src="https://github.com/Ganomanut/junubinTech_website1/blob/main/visualscore.png" alt="Match Score Visualization">
+    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
     <h3>Resume Highlights</h3>
-    <img src="https://github.com/Ganomanut/junubinTech_website1/blob/main/resumeparse.png" alt="Resume Parsing Demo">
+    <img src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
   </section>
 
   <section id="resources">
@@ -182,7 +182,7 @@
   </section>
 
   <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
-    <p> Developed By Students from University of Juba </p>
+    <p>Developed By Students from University of Juba</p>
     <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
