--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       margin: 20px auto;
     }
     .logo-img {
-      max-width: 150px;
+      max-width: 100px;
       margin-bottom: 10px;
     }
     pre {
@@ -108,10 +108,12 @@
   <section id="abstract">
     <h2>Abstract</h2>
     <p>
-      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
-    </p>
-    <p>
-      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores. It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
+      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. 
+      Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
+      
+      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. 
+      Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores.
+      It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
     </p>
   </section>
 
