--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,6 +31,14 @@
       margin-top: 10px;
       font-weight: 300;
       color: #e0e0e0;
+    }
+    p.project-desc {
+      font-size: 1.1em;
+      margin-top: 15px;
+      max-width: 750px;
+      margin-left: auto;
+      margin-right: auto;
+      color: #d9f0ff;
     }
     nav a {
       color: #b3e0ff;
@@ -73,11 +80,12 @@
       border-left: 5px solid #0073e6;
     }
     iframe {
-      width: 100%;
-      height: 480px;
+      width: 80%;
+      height: 300px;
       border: none;
       border-radius: 12px;
-      margin-top: 20px;
+      margin: 20px auto;
+      display: block;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     ul li {
@@ -101,6 +109,9 @@
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <h3 class="subtitle">AI Powered Resume Analyzer</h3>
+    <p class="project-desc">
+      An AI-based system that extracts structured information from resumes and predicts the best-fit job category using deep learning.
+    </p>
     <nav>
       <a href="#abstract">Abstract</a> |
       <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a> |
