--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       overflow-x: auto;
       border-left: 5px solid #0073e6;
     }
-    iframe {
-      width: 80%;
-      height: 300px;
+    iframe.square {
+      width: 350px;
+      height: 350px;
       border: none;
       border-radius: 12px;
       margin: 20px auto;
@@ -110,7 +110,7 @@
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <h3 class="subtitle">AI Powered Resume Analyzer</h3>
     <p class="project-desc">
-      An AI-based system that extracts structured information from resumes and predicts the best-fit job category using deep learning.
+      An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.
     </p>
     <nav>
       <a href="#abstract">Abstract</a> |
@@ -187,8 +187,8 @@
 
   <section id="demo">
     <h2>Video Demonstration</h2>
-    <p>Watch the system in action in this brief demonstration:</p>
-    <iframe src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
+    <p>Watch how the AI system parses a resume and predicts the candidate’s job specialization based on extracted skills, titles, and experiences. The prediction output is dynamically generated after resume upload.</p>
+    <iframe class="square" src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
   </section>
 
   <section id="citation">
