--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="AI-Powered Resume Analyzer"/>
-  <title>AI Powered Resume Analyzer</title>
+  <title>What We Developed - AI Resume Analyzer</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -32,14 +31,6 @@
       font-weight: 300;
       color: #e0e0e0;
     }
-    p.project-desc {
-      font-size: 1.1em;
-      margin-top: 15px;
-      max-width: 750px;
-      margin-left: auto;
-      margin-right: auto;
-      color: #d9f0ff;
-    }
     nav a {
       color: #b3e0ff;
       margin: 0 10px;
@@ -59,47 +50,18 @@
     h2 {
       color: #003366;
     }
-    img {
-      display: block;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-      margin: 20px auto;
-    }
     .logo-img {
       max-width: 100px;
       margin-bottom: 10px;
     }
-    .half-size {
-      max-width: 50%;
-    }
-    pre {
-      background: #d9e6f2;
-      padding: 15px;
-      overflow-x: auto;
-      border-left: 5px solid #0073e6;
-    }
-    iframe.square {
-      width: 350px;
-      height: 350px;
-      border: none;
-      border-radius: 12px;
-      margin: 20px auto;
-      display: block;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    ul li {
-      margin-bottom: 8px;
-    }
-    .github-badge {
-      display: inline-block;
-      padding: 3px 8px;
-      font-size: 12px;
-      background-color: #333;
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #004080;
       color: #fff;
-      border-radius: 3px;
-      margin-left: 6px;
-      font-weight: normal;
+    }
+    a.email-link {
+      color: #b3e0ff;
     }
   </style>
 </head>
@@ -109,101 +71,33 @@
     <h1>University of Juba</h1>
     <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
     <h3 class="subtitle">AI Powered Resume Analyzer</h3>
-    <p class="project-desc">
-      An AI-based system that extracts structured information from resumes and predicts the best-fit job category and specialization using deep learning.
-    </p>
     <nav>
-      <a href="#abstract">Abstract</a> |
-      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub<span class="github-badge">New</span></a> |
-      <a href="#visuals">Visualizations</a>
+      <a href="index.html">Home</a> |
+      <a href="developed.html">What We Developed</a> |
+      <a href="complete-project.html">Complete Project</a> |
+      <a href="mission.html">Project Mission</a> |
+      <a href="vision.html">Project Vision</a> |
+      <a href="goals.html">Goals</a> |
+      <a href="installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub</a>
     </nav>
   </header>
 
-  <section id="abstract">
-    <h2>Abstract</h2>
-    <p>
-      This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. 
-      Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
-
-      Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. 
-      Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores.
-      It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
-    </p>
-  </section>
-
-  <section id="method">
-    <h2>Method Overview</h2>
-    <p>
-      The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings.
-      It includes modules for skill extraction, job title prediction, and candidate ranking.
-    </p>
-    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/Overview.png" alt="Method Overview">
-  </section>
-
-  <section id="features">
-    <h2>Key Features</h2>
+  <section>
+    <h2>What We Developed</h2>
+    <p>This page highlights the modules and components developed during the creation of the AI Resume Analyzer system.</p>
     <ul>
-      <li>Resume Parsing into structured JSON</li>
-      <li>Job Description Matching</li>
-      <li>Job Title Prediction using ML</li>
-      <li>Semantic Skill Extraction</li>
-      <li>Candidate Ranking and Score Visualization</li>
+      <li>Resume Parser: Extracts structured data from resumes</li>
+      <li>Job Matcher: Matches resumes with job descriptions</li>
+      <li>Title Classifier: Predicts job titles using ML</li>
+      <li>Skill Extractor: Identifies direct and related skills</li>
+      <li>Scoring Engine: Ranks candidates based on multiple factors</li>
     </ul>
   </section>
 
-  <section id="content">
-    <h2>Information Extracted</h2>
-    <ul>
-      <li>Job Title</li>
-      <li>Candidate Highlights</li>
-      <li>Direct Skill Matches</li>
-      <li>Related Skills</li>
-      <li>Experience Alignment</li>
-      <li>Keyword Frequency Score</li>
-      <li>Overall Matching Score</li>
-    </ul>
-  </section>
-
-  <section id="visuals">
-    <h2>Visualizations</h2>
-
-    <h3>Match Score Visualization</h3>
-    <p>This chart illustrates the AI's assessment of how well a resume aligns with a specific job description. The scores are calculated based on direct skill matches, job title relevance, experience similarity, and other NLP-derived metrics.</p>
-    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/visualscore.png" alt="Match Score Visualization">
-
-    <h3>Resume Parsing Output</h3>
-    <p>This parsed view shows how the system extracts structured information such as job titles, skills, education, and work experience from a raw resume file. This structured data is then used to perform intelligent matching with job listings.</p>
-    <img class="half-size" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/resumeparse.png" alt="Resume Parsing Demo">
-  </section>
-
-  <section id="resources">
-    <h2>Resources</h2>
-    <ul>
-      <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
-      <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
-      <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
-    </ul>
-  </section>
-
-  <section id="demo">
-    <h2>Video Demonstration</h2>
-    <p>Watch how the AI system parses a resume and predicts the candidate’s job specialization based on extracted skills, titles, and experiences. The prediction output is dynamically generated after resume upload.</p>
-    <iframe class="square" src="https://drive.google.com/file/d/1tfn_e7nVp0wflhzedYF0Drv50Cy9O-PS/preview" allow="autoplay"></iframe>
-  </section>
-
-  <section id="citation">
-    <h2>Citation</h2>
-    <pre><code>@misc{gano2025resumeanalyzer,
-  title={AI-Powered Resume Analyzer},
-  author={Gano},
-  year={2025},
-  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
-}</code></pre>
-  </section>
-
-  <footer style="text-align: center; padding: 20px; background-color: #004080; color: #fff;">
+  <footer>
     <p>Developed By Students from University of Juba</p>
-    <p>Contact: <a href="mailto:ganomanut@gmail.com" style="color: #b3e0ff;">ganomanut@gmail.com</a></p>
+    <p>Contact: <a class="email-link" href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
 </body>
