--- a/index.html
+++ b/index.html
@@ -3,101 +3,102 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>What We Developed - AI Resume Analyzer</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #e6f0ff;
-      color: #00264d;
-    }
-    header, section {
-      padding: 40px 80px;
-    }
-    header {
-      background: linear-gradient(to right, #004080, #0073e6);
-      color: #fff;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    }
-    h1 {
-      margin: 0;
-      font-size: 2.8em;
-    }
-    h2.subtitle {
-      font-size: 1.5em;
-      margin-top: 10px;
-      font-weight: 300;
-      color: #e0e0e0;
-    }
-    nav a {
-      color: #b3e0ff;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      background-color: #ffffff;
-      margin: 20px auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0, 51, 102, 0.1);
-      max-width: 1000px;
-    }
-    h2 {
-      color: #003366;
-    }
-    .logo-img {
-      max-width: 100px;
-      margin-bottom: 10px;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #004080;
-      color: #fff;
-    }
-    a.email-link {
-      color: #b3e0ff;
-    }
-  </style>
+  <meta name="description" content="AI-Powered Resume Analyzer"/>
+  <title>Home | AI Powered Resume Analyzer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img class="logo-img" src="https://raw.githubusercontent.com/Ganomanut/junubinTech_website1/main/uoj.jpg" alt="University of Juba Logo" />
-    <h1>University of Juba</h1>
-    <h2 class="subtitle">School of Computer Science and Information Technology (IT)</h2>
-    <h3 class="subtitle">AI Powered Resume Analyzer</h3>
+    <h1>AI Powered Resume Analyzer</h1>
     <nav>
       <a href="index.html">Home</a> |
-      <a href="developed.html">What We Developed</a> |
+      <a href="what-we-developed.html">What We Developed</a> |
       <a href="complete-project.html">Complete Project</a> |
-      <a href="mission.html">Project Mission</a> |
-      <a href="vision.html">Project Vision</a> |
+      <a href="project-mission.html">Project Mission</a> |
+      <a href="project-vision.html">Project Vision</a> |
       <a href="goals.html">Goals</a> |
-      <a href="installation.html">Web App Installation</a> |
-      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub</a>
+      <a href="web-app-installation.html">Web App Installation</a>
     </nav>
   </header>
 
-  <section>
-    <h2>What We Developed</h2>
-    <p>This page highlights the modules and components developed during the creation of the AI Resume Analyzer system.</p>
-    <ul>
-      <li>Resume Parser: Extracts structured data from resumes</li>
-      <li>Job Matcher: Matches resumes with job descriptions</li>
-      <li>Title Classifier: Predicts job titles using ML</li>
-      <li>Skill Extractor: Identifies direct and related skills</li>
-      <li>Scoring Engine: Ranks candidates based on multiple factors</li>
-    </ul>
-  </section>
+  <main>
+    <section id="abstract">
+      <h2>Abstract</h2>
+      <p>
+        This AI-powered resume analyzer automatically parses resumes, extracts structured information, and evaluates how well each resume matches a job description. Built using TensorFlow and natural language processing, the system enhances recruitment efficiency through intelligent automation.
+      </p>
+      <p>
+        Traditional keyword-based systems often fail to capture the nuanced alignment between candidate experience and job requirements. Our system addresses this by using a transformer-based NLP model to parse resumes, match them to job descriptions, and compute semantic and statistical similarity scores. It offers a unified backend for resume parsing and intelligent job matching that can integrate with job portals and support continuous learning.
+      </p>
+    </section>
+
+    <section id="method">
+      <h2>Method Overview</h2>
+      <p>
+        The system parses unstructured resumes into structured formats and computes multi-factor similarity with job postings. It includes modules for skill extraction, job title prediction, and candidate ranking.
+      </p>
+    </section>
+
+    <section id="features">
+      <h2>Key Features</h2>
+      <ul>
+        <li>Resume Parsing into structured JSON</li>
+        <li>Job Description Matching</li>
+        <li>Job Title Prediction using ML</li>
+        <li>Semantic Skill Extraction</li>
+        <li>Candidate Ranking and Score Visualization</li>
+      </ul>
+    </section>
+
+    <section id="info-extracted">
+      <h2>Information Extracted</h2>
+      <ul>
+        <li>Job Title</li>
+        <li>Candidate Highlights</li>
+        <li>Direct Skill Matches</li>
+        <li>Related Skills</li>
+        <li>Experience Alignment</li>
+        <li>Keyword Frequency Score</li>
+        <li>Overall Matching Score</li>
+      </ul>
+    </section>
+
+    <section id="visuals">
+      <h2>Visualizations</h2>
+      <h3>Match Score Visualization</h3>
+      <p>Match Score Visualization</p>
+      <h3>Resume Highlights</h3>
+      <p>Resume Parsing Demo</p>
+    </section>
+
+    <section id="resources">
+      <h2>Resources</h2>
+      <ul>
+        <li><a href="https://drive.google.com/drive/folders/12jgwkMWQ4Ulmj6DOS3rfR-LDWQpCVo1l?usp=sharing" target="_blank">Google Drive</a></li>
+        <li><a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub Repository</a></li>
+        <li><a href="https://drive.google.com/file/d/1yeB43sJYhatpEFbkkfedjOTT1mUfLQId/view?usp=sharing" target="_blank">Google Colab Notebook</a></li>
+      </ul>
+    </section>
+
+    <section id="demo">
+      <h2>Video Demonstration</h2>
+      <p>Watch the system in action in this brief demonstration:</p>
+    </section>
+
+    <section id="citation">
+      <h2>Citation</h2>
+      <pre><code>@misc{gano2025resumeanalyzer,
+  title={AI-Powered Resume Analyzer},
+  author={Gano},
+  year={2025},
+  note={\url{https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer}},
+}</code></pre>
+    </section>
+  </main>
 
   <footer>
     <p>Developed By Students from University of Juba</p>
-    <p>Contact: <a class="email-link" href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
     <p>&copy; 2025 University of Juba. All rights reserved.</p>
   </footer>
 </body>
