--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <a href="project-mission.html">Project Mission</a> |
       <a href="project-vision.html">Project Vision</a> |
       <a href="goals.html">Goals</a> |
-      <a href="web-app-installation.html">Web App Installation</a>
+      <a href="web-app-installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank">GitHub</a>
     </nav>
   </header>
 
