--- a/Developed.html
+++ b/Developed.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>What We Developed</title>
-  <style>
-    body { background-color: #d9e6f2; color: #001f33; font-family: Verdana, sans-serif; padding: 20px; }
-    h1 { color: #004080; }
-    ul { line-height: 1.8; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>What We Developed | AI Powered Resume Analyzer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>What We Developed</h1>
-  <p>We developed a unified platform capable of:</p>
-  <ul>
-    <li>Parsing resumes into structured JSON</li>
-    <li>Matching resumes to job descriptions using NLP</li>
-    <li>Predicting job titles with machine learning</li>
-    <li>Ranking candidates with visual match scores</li>
-    <li>Generating semantic skill matches</li>
-  </ul>
+  <header>
+    <h1>AI Powered Resume Analyzer</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="what-we-developed.html">What We Developed</a> |
+      <a href="complete-project.html">Complete Project</a> |
+      <a href="project-mission.html">Project Mission</a> |
+      <a href="project-vision.html">Project Vision</a> |
+      <a href="goals.html">Goals</a> |
+      <a href="web-app-installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>What We Developed</h2>
+      <ul>
+        <li><strong>Resume Parser:</strong> Extracts structured information like job title, skills, experience, etc. from unstructured resumes.</li>
+        <li><strong>Job Description Dataset:</strong> A comprehensive dataset including job titles, qualifications, salary range, and more.</li>
+        <li><strong>Matching Algorithm:</strong> Computes similarity scores between resume and job description to assess candidate fit.</li>
+        <li><strong>Visualization:</strong> Visualizes matching scores and candidate ranking.</li>
+        <li><strong>Web Interface:</strong> User-friendly interface with multiple tabs for project info and installation guidance.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Developed By Students from University of Juba</p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  </footer>
 </body>
 </html>
