--- a/mission.html
+++ b/mission.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mission</title>
-  <style>
-    body { background-color: #b3d9ff; color: #001a33; font-family: Georgia, serif; padding: 30px; }
-    h1 { color: #002b4d; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Project Mission | AI Powered Resume Analyzer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Our Mission</h1>
-  <p>
-    To transform traditional hiring by developing an AI-driven platform that streamlines resume evaluation, reduces hiring time, and improves job-to-candidate alignment through smart automation.
-  </p>
+  <header>
+    <h1>AI Powered Resume Analyzer</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="what-we-developed.html">What We Developed</a> |
+      <a href="complete-project.html">Complete Project</a> |
+      <a href="project-mission.html">Project Mission</a> |
+      <a href="project-vision.html">Project Vision</a> |
+      <a href="goals.html">Goals</a> |
+      <a href="web-app-installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Project Mission</h2>
+      <p>
+        To streamline and enhance the recruitment process by providing an AI-driven resume analysis and matching system that delivers accurate, efficient, and insightful candidate-job matching.
+      </p>
+      <p>
+        Our mission includes making recruitment fairer and faster by using advanced AI techniques to extract meaningful data from resumes and match candidates effectively with open roles.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Developed By Students from University of Juba</p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  </footer>
 </body>
 </html>
