--- a/vision.html
+++ b/vision.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Vision</title>
-  <style>
-    body { background-color: #cce0ff; color: #003355; font-family: 'Segoe UI', sans-serif; padding: 25px; }
-    h1 { color: #004488; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Project Vision | AI Powered Resume Analyzer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Our Vision</h1>
-  <p>
-    To become a leading AI platform for recruitment analytics, empowering organizations to make data-driven hiring decisions with fairness, efficiency, and precision.
-  </p>
+  <header>
+    <h1>AI Powered Resume Analyzer</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="what-we-developed.html">What We Developed</a> |
+      <a href="complete-project.html">Complete Project</a> |
+      <a href="project-mission.html">Project Mission</a> |
+      <a href="project-vision.html">Project Vision</a> |
+      <a href="goals.html">Goals</a> |
+      <a href="web-app-installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Project Vision</h2>
+      <p>
+        To build a state-of-the-art AI system that becomes the gold standard for automated resume analysis and job matching, revolutionizing how organizations find the best candidates.
+      </p>
+      <p>
+        We envision a future where recruitment is driven by intelligent data insights, reducing bias and increasing hiring success rates globally.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Developed By Students from University of Juba</p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  </footer>
 </body>
 </html>
