--- a/goals.html
+++ b/goals.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Goals</title>
-  <style>
-    body { background-color: #e6f3ff; color: #002244; font-family: Calibri, sans-serif; padding: 20px; }
-    h1 { color: #003366; }
-    ul { line-height: 1.8; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Goals | AI Powered Resume Analyzer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Project Goals</h1>
-  <ul>
-    <li>Automate resume parsing with high accuracy</li>
-    <li>Enable semantic job-resume matching</li>
-    <li>Provide explainable match scores</li>
-    <li>Support recruiters with candidate ranking</li>
-    <li>Integrate the tool into job platforms and HR systems</li>
-  </ul>
+  <header>
+    <h1>AI Powered Resume Analyzer</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="what-we-developed.html">What We Developed</a> |
+      <a href="complete-project.html">Complete Project</a> |
+      <a href="project-mission.html">Project Mission</a> |
+      <a href="project-vision.html">Project Vision</a> |
+      <a href="goals.html">Goals</a> |
+      <a href="web-app-installation.html">Web App Installation</a> |
+      <a href="https://github.com/Ganomanut/Updated-AI-Powered-Resume-Analyzer" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Project Goals</h2>
+      <ul>
+        <li>Develop an accurate AI-powered resume parser</li>
+        <li>Create a robust job description matching system</li>
+        <li>Build an intuitive web interface for ease of use</li>
+        <li>Enable visualization of match scores and highlights</li>
+        <li>Ensure scalability and integration with HR tools</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Developed By Students from University of Juba</p>
+    <p>Contact: <a href="mailto:ganomanut@gmail.com">ganomanut@gmail.com</a></p>
+    <p>&copy; 2025 University of Juba. All rights reserved.</p>
+  </footer>
 </body>
 </html>
